php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55187 readlink returns weird characters when false result
Submitted: 2011-07-12 10:00 UTC Modified: 2011-07-12 11:15 UTC
From: jinmoku at hotmail dot com Assigned: pajoye (profile)
Status: Closed Package: Filesystem function related
PHP Version: 5.3.6 OS: Win 7
Private report: No CVE-ID: None
 [2011-07-12 10:00 UTC] jinmoku at hotmail dot com
Description:
------------
readlink returns weird characters when false result

Test script:
---------------
var_dump(readlink(''));

Expected result:
----------------
Warning: readlink(): readlink failed to read the symbolic link (), error 3)
string(4) "false"

Actual result:
--------------
Warning: readlink(): readlink failed to read the symbolic link (), error 3)
string(4) "<Ks"

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-07-12 10:03 UTC] jinmoku at hotmail dot com
-Operating System: +Operating System: Win 7
 [2011-07-12 10:03 UTC] jinmoku at hotmail dot com
Added OS
 [2011-07-12 10:06 UTC] jinmoku at hotmail dot com
more fun with :

var_dump(is_link(''));
var_dump(readlink(''));
 [2011-07-12 11:15 UTC] pajoye@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=313176
Log: - Fixed bug #55187, readlink returns weird characters when false result
 [2011-07-12 11:15 UTC] pajoye@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: pajoye
 [2011-07-12 11:15 UTC] pajoye@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:49 UTC] laruence@php.net
Automatic comment on behalf of pajoye
Revision: http://git.php.net/?p=php-src.git;a=commit;h=b6745ea43a7c04551b112901882eb7a992773cd6
Log: - Fixed bug #55187, readlink returns weird characters when false result
 [2012-07-24 23:40 UTC] rasmus@php.net
Automatic comment on behalf of pajoye
Revision: http://git.php.net/?p=php-src.git;a=commit;h=b6745ea43a7c04551b112901882eb7a992773cd6
Log: - Fixed bug #55187, readlink returns weird characters when false result
 [2013-11-17 09:37 UTC] laruence@php.net
Automatic comment on behalf of pajoye
Revision: http://git.php.net/?p=php-src.git;a=commit;h=b6745ea43a7c04551b112901882eb7a992773cd6
Log: - Fixed bug #55187, readlink returns weird characters when false result
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 10 18:00:01 2026 UTC