- Fixed bug #55187, readlink returns weird characters when false result